--- a/Login_v8/register.html
+++ b/Login_v8/register.html
@@ -30,7 +30,7 @@
 	<div class="limiter">
 		<div class="container-login100">
 			<div class="wrap-login100">
-				<form class="login100-form validate-form p-l-55 p-r-55 p-t-178">
+				<form method="post" action="connect.php" class="login100-form validate-form p-l-55 p-r-55 p-t-178">
 					<span class="login100-form-title">
 						Register Form
 					</span>
@@ -138,7 +138,7 @@
 					</div>
 
 					<div class="container-login100-form-btn">
-						<button class="login100-form-btn" style="size; width: 200px">
+						<button type="submit" class="login100-form-btn" style="size; width: 200px">
 							Register
 						</button>
 					</div>
