--- a/client/login.html
+++ b/client/login.html
@@ -10,7 +10,8 @@
 </head>
 <body>
 <h1>Welcome to the Tryme Quiz Based Hiring System</h1>
-<input id="username" placeholder="username"><br><br> <input id="password" placeholder="password"><br><br>
+<input id="username" placeholder="username"><br><br>
+<input id="password" placeholder="password"><br><br>
 <button onclick="bclick()"> Click Me</button>
 <br><br>
 </body>
