new gui pages created

--- a/website_new/login.html
+++ b/website_new/login.html
@@ -12,7 +12,9 @@
     <h4>UserID:<nbsp><input id="username" placeholder=""><br></h4>
     <h4>Password:<nbsp><input id="password" placeholder=""><br></h4>
     <button onclick="login_click()">LOGIN</button>
+    
     <br>
-    <h4>Don't have an account?   <button onclick="signup_click()">SignUp</button></h4>
+
+    <h4></h4><button onclick="signup_click()">SignUp</button>
 </body>
 </html>
