--- a/website_new/signUp.html
+++ b/website_new/signUp.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Welcome to Tryme!</title>
     
     <script src="login.js"></script>
 </head>
