--- a/website_new/signup_candidate.html
+++ b/website_new/signup_candidate.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>Welcome to Tryme!</title>
     
-    <script src="login.js"></script>
+    <script src="signup_candidate.js"></script>
 </head>
 <body>
     
@@ -15,7 +15,7 @@
     <label for="RepresentativeRB">Representative</label><br>
 
 
-    <h4>UserID:     <nbsp><input id="username" placeholder=""><br></h4>
+    <h4>Username:   <nbsp><input id="username" placeholder=""><br></h4>
     <h4>Password:   <nbsp><input id="password" placeholder=""><br></h4>
     <h4>Name:       <nbsp><input id="name" placeholder=""><br></h4>
     <h4>Surname:    <nbsp><input id="surname" placeholder=""><br></h4>
